--- a/src/Reconnix/MainBundle/Resources/config/validation.yml
+++ b/src/Reconnix/MainBundle/Resources/config/validation.yml
@@ -7,3 +7,20 @@ Reconnix\MainBundle\Entity\Block:
                 max: 32
         content:
             - NotBlank: ~
+
+Reconnix\MainBundle\Entity\Page:
+    properties:
+        name:
+            - NotBlank: ~
+            - Length:
+                min: 3
+                max: 32
+        title:
+            - NotBlank: ~
+            - Length:
+                min: 3
+                max: 32
+        tagline:
+            - Length:
+                min: 3
+                max: 64
