--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+reconnix_content_wizard:
+    resource: "@ReconnixContentWizardBundle/Resources/config/routing.yml"
+    prefix:   /
+
+reconnix_dep_inj:
+    resource: "@ReconnixDepInjBundle/Resources/config/routing.yml"
+    prefix:   /depinj
+
 reconnix_main:
     resource: "@ReconnixMainBundle/Resources/config/routing.yml"
     prefix:   /
