--- a/src/Reconnix/MainBundle/Resources/config/routing.yml
+++ b/src/Reconnix/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 reconnix_main_index:
     pattern:  /page/{name}
     defaults: { _controller: ReconnixMainBundle:Page:index }
+
+reconnix_main_newsroom:
+    pattern:  /newsroom/{tag}/{name}
+    defaults: { _controller: ReconnixMainBundle:Page:newsroom }
