--- a/src/Reconnix/MainBundle/Resources/config/routing.admin.content_wizard.yml
+++ b/src/Reconnix/MainBundle/Resources/config/routing.admin.content_wizard.yml
@@ -1,3 +1,7 @@
 reconnix_main_admin_content_wizard_index:
     pattern:  /
     defaults: { _controller: ReconnixMainBundle:Admin/ContentWizard:index }
+
+reconnix_main_admin_content_wizard_add:
+    pattern:  /add/{type}
+    defaults: { _controller: ReconnixMainBundle:Admin/ContentWizard:add }
