--- a/src/Reconnix/MainBundle/Resources/config/routing.admin.yml
+++ b/src/Reconnix/MainBundle/Resources/config/routing.admin.yml
@@ -21,3 +21,7 @@ reconnix_main_admin_content_wizard:
 reconnix_main_admin_templates:
     resource: "@ReconnixMainBundle/Resources/config/routing.admin.templates.yml"
     prefix: /templates
+
+reconnix_main_admin_menu:
+    resource: "@ReconnixMainBundle/Resources/config/routing.admin.menu.yml"
+    prefix: /menu
