Menu functionality, pretty back end and form tabs for Page Form

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+reconnix_menu_manager:
+    resource: "@ReconnixMenuManagerBundle/Resources/config/routing.yml"
+    prefix:   /
+
 reconnix_content_wizard:
     resource: "@ReconnixContentWizardBundle/Resources/config/routing.yml"
     prefix:   /
