--- a/src/Reconnix/MainBundle/Resources/config/routing.admin.blocks.yml
+++ b/src/Reconnix/MainBundle/Resources/config/routing.admin.blocks.yml
@@ -9,3 +9,7 @@ reconnix_main_admin_blocks_add:
 reconnix_main_admin_blocks_edit:
     pattern:  /edit/{id}
     defaults: { _controller: ReconnixMainBundle:Admin/Blocks:edit }
+
+reconnix_main_admin_blocks_delete:
+    pattern:  /delete/{id}
+    defaults: { _controller: ReconnixMainBundle:Admin/Blocks:delete }
