--- a/src/Reconnix/MainBundle/Resources/config/routing.admin.pages.yml
+++ b/src/Reconnix/MainBundle/Resources/config/routing.admin.pages.yml
@@ -9,3 +9,15 @@ reconnix_main_admin_pages_add:
 reconnix_main_admin_pages_edit:
     pattern:  /edit/{id}
     defaults: { _controller: reconnix_main_admin.pages:editAction}
+
+reconnix_main_admin_pages_delete:
+    pattern:  /delete/{id}
+    defaults: { _controller: reconnix_main_admin.pages:deleteAction}
+
+reconnix_main_admin_pages_add_block:
+    pattern:  /add-block/{blockId}/{pageId}
+    defaults: { _controller: reconnix_main_admin.pages:addBlockAction}
+
+reconnix_main_admin_pages_delete_block:
+    pattern:  /delete-block/{blockId}/{pageId}
+    defaults: { _controller: reconnix_main_admin.pages:deleteBlockAction}
